--- a/src/app/components/view-feed/view-feed.component.css
+++ b/src/app/components/view-feed/view-feed.component.css
@@ -1,21 +1,32 @@
 .display {
   background-color: white;
 }
+
 html,
 body {
   height: 100%;
 }
 
 @media (min-width: 900px)  {
-.mobile{
-  display: none;
-}
+  .mobile{
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 900px) {
- 
-.mobile{
-  display: none;
+  .mobile{
+    display: none;
+  }
 }
+
+@media  (max-width: 600px)  {
+
+  .mobile {
+    width: 100%;
+    box-sizing: border-box;
+    overflow-x: hidden;
+  }
+
 }
+
 
